Added auto update cmd in AzSKSettings.json

--- a/src/AzSK.AAD/Framework/Configurations/AzSKSettings.json
+++ b/src/AzSK.AAD/Framework/Configurations/AzSKSettings.json
@@ -4,5 +4,6 @@
    "EnableAADAuthForOnlinePolicyStore": false,
    "UsageTelemetryLevel": "Anonymous",
    "LocalControlTelemetryKey": "00000000-0000-0000-0000-000000000000",
-   "LocalEnableControlTelemetry": false
+   "LocalEnableControlTelemetry": false,
+   "AutoUpdateCommand": "Install-Module AzSK.AAD -AllowClobber -Scope CurrentUser -Force"
 }
