Added VMSS metadata in telemetry, modified VMs ASC queries

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -60,8 +60,8 @@
       "ASCRecommendations": [ "EncryptionOnVm", "InstallAntimalware", "VulnerabilityAssessmentDeployment" ],
       "ASCApprovedPatchingHealthStatuses": [ "Healthy" ],
       "ASCApprovedBaselineStatuses": [ "Healthy" ],
-      "QueryforBaselineRule": [ "SecurityBaseline | where TimeGenerated >ago(1d) | where ResourceId ==\"{0}\" | summarize arg_max(TimeGenerated,*)by Description| where AnalyzeResult == \"Failed\" " ],
-      "QueryforMissingPatches": [ "Update | where TimeGenerated >ago(1d) |where OSType != \"Linux\" and UpdateState =~ \"Needed\" and iff(isnotnull(toint(Optional)), Optional == false, Optional == \"false\") == true and iff(isnotnull(toint(Approved)), Approved != false, Approved != \"false\") == true and (Classification == \"Security Updates\" or Classification == \"Critical Updates\") and ResourceId ==\"{0}\"| summarize AggregatedValue =dcount(UpdateID) by UpdateID,Title |limit  1000000000 " ],
+      "QueryforBaselineRule": [ "SecurityBaseline | where TimeGenerated >ago(1d) | where ResourceId =~ \"{0}\" | summarize arg_max(TimeGenerated,*)by Description| where AnalyzeResult == \"Failed\" " ],
+      "QueryforMissingPatches": [ "Update | where TimeGenerated >ago(1d) |where UpdateState =~ \"Needed\" and iff(isnotnull(toint(Optional)), Optional == false, Optional == \"false\") == true and iff(isnotnull(toint(Approved)), Approved != false, Approved != \"false\") == true and (Classification == \"Security Updates\" or Classification == \"Critical Updates\") and ResourceId =~ \"{0}\"| summarize AggregatedValue =dcount(UpdateID) by UpdateID,Title |limit  1000000000 " ],
       "VulnAssessmentSolution":{
         "AgentName": "QualysAgent",
         "RequiredVersion":"1.6.4.9"
@@ -107,9 +107,9 @@
       "ASCRecommendations": [],
       "ASCApprovedPatchingHealthStatuses": [ "Healthy" ],
       "ASCApprovedBaselineStatuses": [ "Healthy" ],
-      "QueryforBaselineRule": [ "SecurityBaseline | where TimeGenerated >ago(1d) | where ResourceId ==\"{0}\" | summarize arg_max(TimeGenerated,*)by Description| where AnalyzeResult == \"Failed\" " ],
-      "QueryforMissingPatches": [ "Update | where TimeGenerated >ago(1d) |where OSType == \"Linux\" and UpdateState =~ \"Needed\" and iff(isnotnull(toint(Optional)), Optional == false, Optional == \"false\") == true and iff(isnotnull(toint(Approved)), Approved != false, Approved != \"false\") == true and (Classification == \"Security Updates\" or Classification == \"Critical Updates\") and ResourceId ==\"{0}\"| summarize AggregatedValue =dcount(UpdateID) by UpdateID,Title |limit  1000000000 " ],
-      "QueryForLinuxAntimalwareStatus": ["ProtectionStatus | where TimeGenerated > ago(2d) and TypeofProtection == \"Sophos Anti-Virus\" and ProtectionStatus =~ \"Real Time Protection\"  and ResourceId contains \"{0}\" | summarize arg_max(TimeGenerated, *)"],
+      "QueryforBaselineRule": [ "SecurityBaseline | where TimeGenerated >ago(1d) | where ResourceId =~ \"{0}\" | summarize arg_max(TimeGenerated,*)by Description| where AnalyzeResult == \"Failed\" " ],
+      "QueryforMissingPatches": [ "Update | where TimeGenerated >ago(1d) |where UpdateState =~ \"Needed\" and iff(isnotnull(toint(Optional)), Optional == false, Optional == \"false\") == true and iff(isnotnull(toint(Approved)), Approved != false, Approved != \"false\") == true and (Classification == \"Security Updates\" or Classification == \"Critical Updates\") and ResourceId =~ \"{0}\"| summarize AggregatedValue =dcount(UpdateID) by UpdateID,Title |limit  1000000000 " ],
+      "QueryForLinuxAntimalwareStatus": ["ProtectionStatus | where TimeGenerated > ago(2d) and TypeofProtection == \"Sophos Anti-Virus\" and ProtectionStatus =~ \"Real Time Protection\"  and ResourceId =~ \"{0}\" | summarize arg_max(TimeGenerated, *)"],
       "VulnAssessmentSolution": {
         "AgentName": "QualysAgentLinux",
         "RequiredVersion": "1.6.0.96"
@@ -154,7 +154,8 @@
         "MonitoringAgentAssessmentKey": "d1db3318-01ff-16de-29eb-28b344515626"
       },
       "ResourceDetailsKeys": {
-        "WorkspaceId": "Reporting workspace customer id"
+        "WorkspaceId": "Reporting workspace customer id",
+        "WorkspaceResourceId": "Reporting workspace azure id"
       }
     },
     "ControlExclusionsByService" : 
