--- a/src/AzSK.AzureDevOps/Framework/Configurations/AzSKSettings.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/AzSKSettings.json
@@ -1,9 +1,9 @@
 {
-   "UseOnlinePolicyStore": true,
-   "OnlinePolicyStoreUrl": "https://azsdkossep.azureedge.net/$Version/$FileName",   
-   "EnableAADAuthForOnlinePolicyStore": false,
-   "UsageTelemetryLevel": "Anonymous",
-   "LocalControlTelemetryKey": "00000000-0000-0000-0000-000000000000",
-   "LocalEnableControlTelemetry": false,
-   "AutoUpdateCommand": "Install-Module AzSK -AllowClobber -Scope CurrentUser -Force"
+    "UseOnlinePolicyStore":  true,
+    "OnlinePolicyStoreUrl":  "https://azsdkossepstaging.azureedge.net/$Version/$FileName",
+    "EnableAADAuthForOnlinePolicyStore":  false,
+    "UsageTelemetryLevel":  "Anonymous",
+    "LocalControlTelemetryKey":  "00000000-0000-0000-0000-000000000000",
+    "LocalEnableControlTelemetry":  false,
+    "AutoUpdateCommand": "Install-Module AzSK -AllowClobber -Scope CurrentUser -Force"
 }
