code changes for control Azure_Subscription_Config_ASC_Tier

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -481,12 +481,7 @@
   "SubscriptionCore": {
     "EnableV1AlertFailure": false,
     "ASCTier": ["Standard"],
-    "ResourceTypeASCTier":{
-      "VirtualMachines" : ["Standard"],
-      "SqlServers" : ["Standard"],
-      "AppServices" : ["Standard"],
-      "StorageAccounts" : ["Standard"]
-    },
+    "Standard" : ["VirtualMachines","SqlServers","AppServices","StorageAccounts"],
     "credHighTH": 7,
     "credModerateTH": 30,
     "NonADIdentitiesPatterns" : ["(.)*#ext#@(.)*.onmicrosoft.com"],
