Approved Exception Bug fix

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -478,6 +478,7 @@
       "Low": 90
     }
   },
+
   "SubscriptionCore": {
     "EnableV1AlertFailure": false,
     "ASCTier": ["Standard"],
@@ -514,6 +515,7 @@
       "Low": 90
     }
   },
+  "DefaultAttestationPeriodForExemptControl": 180,
   "ResultComplianceInDays": {
     "DefaultControls": 3,
     "OwnerAccessControls": 90
