Update guest config policy health control

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -90,7 +90,11 @@
           "ExtensionType": "MicrosoftMonitoringAgent",
           "Publisher": "Microsoft.EnterpriseCloud.Monitoring"
         }
-      ]
+      ],
+      "RequiredGuestConfigPolicies":{
+        "RequiredPolicyDefinitionIds" : [],
+        "RequiredPolicySetDefinitionIds" : []
+      }
     },
     "Linux": {
       "SupportedSkuList": [],
@@ -138,7 +142,11 @@
           "ExtensionType": "OmsAgentForLinux",
           "Publisher": "Microsoft.EnterpriseCloud.Monitoring"
         }
-      ]
+      ],
+      "RequiredGuestConfigPolicies":{
+        "RequiredPolicyDefinitionIds" : [],
+        "RequiredPolicySetDefinitionIds" : []
+      }
     },
     "Windows_OS_Baseline_Ids": [],
     "ASCPolicies": {
