updated AKS image path

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -540,7 +540,7 @@
   "WhitelistedResourceGroups": [],
   "InClusterCA": {
     "AKS":{
-      "RequiredImagePath": "azsktest/akstest",
+      "RequiredImagePath": "azskteam/azsk-aks",
       "RequiredImageTag": "latest"
     }
   },
