App Service Auth Control changes

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -412,6 +412,13 @@
       "facebookAppId",
       "twitterConsumerKey",
       "microsoftAccountClientId"
+    ],
+    "AllowedAuthenticationProviders": [
+      "googleClientId",
+      "facebookAppId"
+    ],
+    "AllowedExternalRedirectURLs": [
+      "https://www.google.com"
     ]
   },
   "DataBricksFilters":{
