--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -412,6 +412,10 @@
       "facebookAppId",
       "twitterConsumerKey",
       "microsoftAccountClientId"
+    ],
+    "AllowedAuthenticationProviders": [
+    ],
+    "AllowedExternalRedirectURLs": [
     ]
   },
   "DataBricksFilters":{
