limit 100 prj, Sub to Org folder, restrict entire org, LA user details, Bug 5935603

--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/ControlSettings.json
@@ -93,6 +93,8 @@
     ]
  }
   ],
+  "IsAllowLongRunningScan": true,
+  "LongRunningScanCheckPoint": 1000,
   "DefaultValidAttestationStates": [ "NotAnIssue", "WillFixLater", "WillNotFix" ],
   "NewControlGracePeriodInDays": {
     "Default": 60,
